# difftests

./: .gitignore  README.md  pyproject.toml
src/difftests/: __init__.py  cli.py  generator.py  git_utils.py  providers.py  runner.py
tests/: test_cli.py  test_generator.py  test_git_utils.py  test_integration_llm.py  test_providers.py  test_runner.py
